# junkyard

./: .gitignore  Cargo.toml
svc/maths/: Cargo.toml
svc/maths/src/: lib.rs  matrix.rs  vector.rs
svc/maths/tests/: matrix.rs  vector.rs
svc/neural_net/: Cargo.toml
svc/neural_net/src/: activations.rs  layer.rs  lib.rs  loss.rs
svc/neural_net/tests/: network.rs
