[package]
name = "neural_net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maths = { version = "0.1.0", path = "../maths" }
rand.workspace = true
log.workspace = true
env_logger.workspace = true
ctor.workspace = true

